<resources>
    <string name="app_name">FineNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="well_come_to_the_account">Well come to the account</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Login Here</string>
    <string name="signup">SignUp</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="this_is_dummy_title">This is Dummy title</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed_to_using_content_here_content_here_making_it_look_like_readable_english_many_desktop_publishing_packages_and_web_page_editors_now_use_lorem_ipsum_as_their_default_model_text_and_a_search_for_lorem_ipsum_will_uncover_many_web_sites_still_in_their_infancy">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="add_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="no_notes_found">No Notes Found</string>
    <string name="sign_in">SignIn</string>
    <string name="signup_here">SignUp Here</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="chooseform">Choose From</string>
    <string name="logout">Logout</string>
    <string name="my_notes">My Notes</string>
    <string name="delete">Delete</string>
    <string name="ancd">ancd</string>
    <string name="home">Home</string>
    <string name="editnote">Edit Note</string>
    <string name="lightMode">Light Mode</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="SystemDefault">System Default</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string-array name="theme_selection">
        <item>@string/lightMode</item>
        <item>@string/DarkMode</item>
        <item>@string/SystemDefault</item>
    </string-array>

    <string-array name="language_selection">
        <item>@string/english</item>
        <item>@string/urdu</item>
    </string-array>
</resources>